--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,174 +1,13 @@
 html,
 body {
-  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#chat {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-.error {
-  color: red;
-}
-
-.buttonSub {
-  margin: 10px;
-  align-self: flex-end;
-  display: block;
-  width: 88%;
-}
-
-.nav-login {
-  font-size: 20px;
-  font-weight: 500;
-  box-sizing: border-box;
-  display: grid;
-  justify-content: center;
-  align-content: space-around;
-}
-
-.navbarcontainer {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 2px;
-  margin-right: 2px;
-  padding: 16px 60px;
-  border: solid #e2e2e2;
-}
-
-.navbarcontainer button {
-  font-size: 16px;
-  padding: 6px 12px;
-  background-color: #0d6efd;
-  line-height: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  border-bottom-color: #0d6efd;
-  border-color: #0d6efd;
-  color: white;
-  font-weight: 400;
-}
-
-.shadow {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-}
-
-.modal-input {
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.error-modal {
-  color: rgba(208, 28, 12, 0.862);
-  font-size: 14px;
-}
-
-.sign {
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  margin-top: 20vh;
-}
-
-.signup-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-  border-radius: 6px;
-  padding: 50px;
-  width: 100vh;
-}
-
-.signin-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-content: center !important;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-  border-radius: 6px;
-  padding: 50px;
-  width: 100vh;
-}
-.card-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 48px !important;
-  flex-wrap: wrap;
-  flex-grow: 1;
-  width: 100vh;
-}
-
-.signup-form-container {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  justify-content: center;
-  padding-left: 36px;
-}
-
-.signup-form-container h1 {
-  display: flex;
-  justify-content: center;
-}
-
-.signup-form-container input {
-  display: flex;
-  flex-direction: column;
-  margin: 0px !important;
-  height: 48px;
-  color: black;
-}
-
-.buttonSign {
-  background-color: white;
-  border: 1px solid rgba(13, 110, 253);
-  border-radius: 3px;
-  color: rgba(13, 110, 253);
-  height: 5vh;
-}
-
-/* .in {
-  height: 100vw;
-  flex-grow: 1;
-  display: flex;
-  overflow: hidden;
-  align-items: center;
-  justify-content: center;
-} */
-
-.signin {
-  padding: 0 !important;
-}
-.card-footer {
-  box-sizing: border-box;
-  padding: 1.5rem !important;
-  background-color: rgb(249 249 249) !important;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border-radius: 5px;
-  border-top: 1px solid rgb(214 214 214);
-}
-.registration {
-  text-align: center;
 }
